# Rust_WASM_Svelte_Playground

./: README.md  Svelte in a nutshell.md  WASM in a nutshell.md
Presentation/: Presentation.html  Presentation.md
rust/: Cargo.toml  README.md
rust/src/: lib.rs  parser.rs
svelteKit_demoSsr/: package-lock.json  package.json
svelte_ts/: package-lock.json  package.json  vite.config.js
svelte_ts/src/: App.svelte  main.js  stores.js
svelte_ts/src/components/: DemoComp.svelte  FileParser.svelte
sveltekit_tsSkeleton/: package-lock.json  package.json
